@@ -6,6 +6,8 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2329] fixed screen renaming (Aly)
+ - [ZBX-2315] fixed multiple issues with JS scrollbar (Aly)
  - [ZBX-2321] fixed log items appearing in the wrong order (Alexei,asaveljevs,Sasha)
  - [DEV-458] added marks on maps if elements trigger changed status recently (Aly)
  - [ZBX-2290] added export/import of map images (Vedmak)
